visual improvements
